client/src/index.css
main {
	max-width: 100%;
  max-height: 100%;
  display: flex;
  padding: 1rem;
  font-weight: bold;
}

:root {
  --primary: #ffd700;
  --secondary: #3094c6;
  --tertiary: #239854;
  --light: #eee6da;
  --dark: #0d1b1e;
  --darker: #111111;
  --error: rgb(228, 46, 1);
  --spacing-one: calc(1rem * 0.5);
  --spacing-two: calc(1rem);
  --spacing-five: calc(2.5rem);
}

.primary{
  background-color: var(--primary);
  filter: brightness(125%);
}


.secondary{
  background-color: var(--secondary);
}

.tertiary{
  background-color: var(--tertiary);
}

.light{
  background-color: var(--light);
}

.white{
  background-color: white;
}

.text-stretch
{
  letter-spacing: 2px;
}

.border{
  border: 2px solid black;
}

section {
  padding: 25px;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  margin: -6px;
  border-top: 2px solid black;
}

main {
  display: flex;
  flex-direction: row;
  margin: 1vw;
  justify-content: center;
}

.center {
  display: flex;
  margin-top: 20px;
  justify-content: center;
}

.text-center{
  text-align: center;
}

.border{
  border: 1px solid black;
}
/*Hero Style Start */
.hero {
  background-size: cover;
  background-position: center;
  height: 80vh;
  display: flex;
  justify-content: center;
  align-items: flex-start;
  background-attachment:scroll;
  background-position: 80%;
  background-color: #555555;
  border-top: 10px solid var(--secondary);
  border-bottom: 10px solid var(--secondary);
}

.hero img  {
  height: 100%;
  width: 100%;
  opacity: 0.6;
}


/* About Section */

.about{
  display: flex;
  flex-direction: column;
  justify-content: center;
  border: .5px solid black;
  box-sizing: content-box;
  height: 20vh;
  width: 70vw;
  margin: 2rem;
  padding: 3rem;
  font-weight: 500;
  background-color: white;
}

/* Discover Section */

.discover{
  padding: 25px;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  margin: -6px;

}

.discoverWrap{
  margin: 2rem;
  height: 60vh;
  width: 100vw;
  
}


/* Slides */

.slide{
  margin-top: 5rem;
}

.discoverCard{
  display: flex;
  flex-direction: column;
  border: 1px solid black;
  height: 50vh;
  margin: 1rem;
  max-width: 300px;
  flex-wrap: wrap;
  border-radius: 10%;
}

.discoverCard img{
  display: flex;
  flex-shrink: calc();
  width: 100%;
  max-width: 275px;
  height: 10rem;
  min-height: fit-content;
  margin: 10px;
  border: 2px solid black;
}

.discoverCard img:hover{
  filter: contrast(110%) brightness(120%) drop-shadow(4px 4px 5px var(--primary)) ;
  transform: scale(1);
  transition: .25s ease-in-out;
  -webkit-transform: scale(1);
}

.cardTextcnt{
  margin: 0px 20px 0px 20px ;
  height: 5rem;
}

.cardBtn{
  margin-bottom: 10px;
}

/* Reservation Section */

.bookingMain{

    max-width: 100vw;
    max-height: 100vh;
    display: flex;
    margin-left: 5rem;
    
    
}

.calendar{
  background-color: var(--secondary);
  width: 100%;
  padding-top: 2em;
  padding-bottom: 2em;
  margin-bottom: 5rem;

  
}
.resHead{
  height: 20vh;
  padding: 2em;
  margin-top: 1rem;
  margin-bottom: 1rem;
  
}

.bookingCont{
  margin: 3rem;
  display: flex;
  flex-direction: column;
  height: 315px;
  align-items: center;
  justify-content: center;
  font-weight: 500;
  overflow: hidden;
  background-color: white;
  border: 1px solid black;
}

.bookingBox{
  display: flex;
  align-items: center;
  flex-direction: column;
  height: 275px;
  width: 350px;

}

.bookingDropdown{
  text-align: center;
  margin: 10px;
  justify-content: space-between;
}
#rooms{
  margin: 5px;
  margin-bottom: 0px;
}

#hiddenBtn{
  opacity: 0;
}

.loginPlsBtn{
  margin-top: 6rem;
  margin-bottom: 10rem;
}
/*Reviews*/
.review-head {
  text-align: center;
  margin-bottom: 1.75rem;
}
.review-page {
  background: url(../src/assets/images/heror.jpg) no-repeat center center fixed;
  display: flex;
  flex-direction: column;
}
.review-container {
  text-align: center;
  display: flex;
  align-items: center;
  flex-direction: column;
  border: 2px solid black;
  padding: 12px;
  margin-bottom: 20px;
}

/*My Profile*/

.my-profile {
  display: block;
  background: url(../src/assets/images/herop1.jpg) no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  margin: 0vw
}

.welcome {
  border-top: 25px solid transparent;
  border-bottom: 45px solid transparent;
  border-radius: 5px;
  display: flex;
  flex-direction: column;
  align-items:center;
  text-decoration: none !important;
}

.my-profile span {
  color: black;
  font-size: 40px;
  font-style: italic;
}

.profile-link {
  font-size: 25px;
  color: var(--darker);
  background-color: #eee6da;
  border: none;
  padding: 20px;
  border-radius: 10px;
  text-decoration: none;
}

.components {
  padding-top: 20px;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
}

.components button {
  color: var(--darker);
  background-color: var(--tertiary);
  border: none;
  padding: 10px 20px;
  font-size: 16px;
  border-radius: 10px;
}

.components textarea {
  border: 1px solid var(--darker);
  display: block;
  padding: 7px 15px;
  font-size: 16px;
  width: 100%;
  margin-bottom: 15px;
  margin-top: 5px;
  border-radius: 10px;
  background-color: rgba(255, 255, 255, 0.471);

}

.components textarea:focus {
  background-color: rgba(255, 255, 255, 0.804);
}

.components input {
  border: 1px solid var(--darker);
  display: block;
  padding: 7px 15px;
  font-size: 16px;
  width: 100%;
  margin-bottom: 15px; 
  border-radius: 10px;
  background-color: rgba(255, 255, 255, 0.542);
}

.components input:focus {
  background-color: rgba(255, 255, 255, 0.899);
}

.reservation-component {
  display: flex;
  flex-direction: column;
  row-gap: 15px;
}

.user-reservations {
  border: 1px solid var(--secondary);
  padding: 10px;
  border-radius: 10px;
  background-color: rgba(255, 255, 255, 0.471);
}
.reservation-component button {
  background: red;
  color: var(--darker);
  border: none;
  padding: 10px 20px;
  font-size: 16px;
  border-radius: 10px;
}

@media screen and (max-width: 950px){
  .discoverWrap{
    margin: 2rem;
    height: 33vh;
    width: 100vw;
  }

  .discoverCard{
    max-width: 40vw;
    max-height: 30vh;
    margin-left: 11%;
  }

  .discoverCard img{
    max-width: 90%;
    height: 50%;
    margin: 10px 5%;
  }

  .cardBtn{
    margin-top: 1vh;
  }

  }


@media screen and (max-width: 600px) {
  .hero {
    height: 100%;
    width: 100%;
    margin-top: 80px;
  }

  .hero img  {
    height: 15em;
  }

  .about{
    height: 20%;
    width: 70%;
    margin: .5rem;
    padding: .5rem;
    font-size:x-small;
  }
  
  .discoverWrap{
    margin: 2rem;
    height: 45vh;
  }

  .discoverCard{
    width: 70%;
    min-height: 300px;
    margin-left: 10%;
  }
  
  .discoverCard img{
    max-width: 80%;
    height: 50%;
    margin-left: 25px;
  }
  
  .cardBtn{
    margin-top: 20%;
  }

/*reservation*/

.resPage{
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
.bookingMain{
  max-width: 100%;
  max-height: 100%;
  display: flex;
  width: 30rem;
  margin-right: 18%;
}

.resHead{
  height: 0;
  padding: 20%;
  margin-top:0;
}

.card{
  height: 380px !important;
}

.mobileBooking{
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
}

.bookingCont{

  width: 100%;
}

.bookingBox{

  width: 100%;
}

}

@media screen and (max-width: 500px){
  .discoverCard{
    max-width: 300px;
    margin-left: 15%;
  }
  
  .cardBtn{
    margin-top: -9rem;
  }
}
@media screen and (max-width: 450px){
  .discoverCard{
    margin: 5% 10%;
    min-height: 275px;
  }

  .discoverWrap{
    height: 25%;
    min-height: 350px;

  }
  .cardBtn {
    margin-top: 5%;
  }
}



@media screen and (max-width: 850px){

}

@media screen and (min-width: 768px) {
  /*My Profile*/
  .components {
    flex-direction: row;
    column-gap: 10px;
  }

  .delete-btn:hover {
    background-color: rgb(101, 4, 4);
  }

  .submit-btn:hover {
    background-color: #3094c6;
  }
  
}

